@@ -1,3 +1,12 @@
+2008-05-28  Mike Kestner <mkestner@novell.com> 
+
+	libstetic/editor/ActionGroupEditor.cs: dispose guarding
+	libstetic/editor/ActionMenuItem.cs: dispose guarding
+	libsteticui/ActionGroupDesigner.cs: dispose guarding
+	libsteticui/ActionGroupEditSession.cs: dispose guarding
+	libsteticui/ActionGroupToolbar.cs: dispose guarding
+	libsteticui/WidgetActionBar.cs: dispose guarding
+
 2008-05-21  Mike Kestner <mkestner@novell.com> 
 
 	* libstetic/wrapper/ActionToolbarWrapper.cs: call FillMenu on Wrap
